public/css/herostyles.css
/* ... */
.hero__content__details .hackathon__details__title span:first-of-type {
  color: #b1151a;
}
.hero__content__details .hackathon__details__discription {
  display: flex;
  line-height: 0.4;
  justify-content: flex-end;
  margin-bottom: 50px;
}
.hero__content__details .hackathon__details__discription div {
  color: #ddd;
  font-size: 16px;
  letter-spacing: 1.6px;
}
.hero__content__banner {
  flex: 1;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: space-evenly;
  margin-left: 40px;
}
.hero__content__banner .banner_img {
  max-width: 40rem;
  height: auto;
  opacity: 0.9;
}
.hero__content__banner_slogan {
  margin-top: 40px;
  font-family: lato;
  color: #ddd;
  font-size: 18px;
}
.hero__content__banner_slogan div {
  letter-spacing: 2px;
  text-align: center;
}
.hero__content__banner_slogan div span {
  margin-top: 50px;
  padding: 0 15px;
}
.hero__content__banner_slogan .save_the_date {
  font-size: 28px;
  letter-spacing: 16px;
  margin-bottom: 15px;
  font-weight: bold;
  text-transform: uppercase;
  text-align: center;
}
.hero__content__banner_slogan .last-date-info {
  margin-bottom: 15px;
}
.register,
.discord {
  color: #ddd;
  margin-right: 20px;
  background: #ff416c;
  background: linear-gradient(to right, #ff416c, #ff4b2b);
  border: none;
  border-radius: 7px;
  font-size: 18px;
  font-weight: 600;
  padding: 12px 20px;
  text-align: center;
  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial,
    sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
  box-shadow: 0 8px 6px -6px black;
  transition: all 0.3s ease-in-out;
}
.register a,
.discord a {
  color: inherit;
}
.register:not([disabled]),
.discord:not([disabled]) {
  outline: none;
}
.register:hover,
.discord:hover {
  background: linear-gradient(to right, #ff3260, #ff3e1c);
  transform: scale(1.05);
}
.hero__content .chat {
  /* backdrop-filter: blur(4px); */
  font-family: lato, sans-serif;
  border-radius: 15px;
  color: black;
  background: #00172C;
  border-bottom: 1px solid #c1002c;
  box-shadow: 0 5px 3px -2px #c1002c;
  width: 400px;
  height: 250px;
  flex-direction: column;
  justify-content: flex-end;
  padding: 0 15px;
  overflow: hidden;
  position: relative;
  z-index: 100;
  margin-top: 50px;
  display: flex;
  /* display: none; */
}
.hero__content .chat__header {
  position: absolute;
  top: 0;
  left: 0;
}
.hero__content .header {
  align-items: center;
  border-radius: 15px 15px 0 0;
  background: #c1002c;
  background: linear-gradient(to right, #c1002c, #ab1a00);
  color: #fff;
  display: flex;
  height: 60px;
  padding: 20px;
  width: 100%;
  text-transform: uppercase;
  z-index: 2;
  transform: translate(0, 0);
}
.hero__content .header__members {
  display: flex;
  align-items: center;
  padding-left: 15px;
}
.hero__content .message {
  display: none;
  flex: 0 0 auto;
  margin-bottom: 5px;
}
.hero__content .message--browser {
  justify-content: flex-start;
}
.hero__content .message--browser .message__content {
  background: #eee;
}
.hero__content .message--server {
  justify-content: flex-end;
}
.hero__content .message--server .message__content {
  background: #ff416c;
  background: linear-gradient(to right, #ff416c, #ff4b2b);
  color: #fff;
  justify-content: flex-end;
  text-align: right;
}
.hero__content .message__content {
  border-radius: 15px;
  min-height: 50px;
  align-items: center;
  display: inline-flex;
  background: #fff;
  padding: 10px;
}
.hero__content .message--left {
  justify-content: center;
}
.hero__content .message--left .message__content {
  background: #fff;
  color: #aaaaaa;
}
.hero__content .message--typing .message__content div {
  animation: wave 0.5s ease infinite;
  border-radius: 100%;
  height: 8px;
  width: 8px;
  background: #b3b3b3;
  margin: 2px;
}
.hero__content .message--typing .message__content div:nth-child(1) {
  animation-delay: 0.1s;
}
.hero__content .message--typing .message__content div:nth-child(2) {
  animation-delay: 0.2s;
}
.hero__content .message--typing .message__content div:nth-child(3) {
  animation-delay: 0.3s;
}
@keyframes wave {
  50% {
    transform: translate(0, -150%);
  }
}
#footer {
  position: relative;
  background-image: url("../img/wave.svg");
  background-repeat: round;
  height: 350px;
}
#footer .wave_box {
  width: 100%;
  position: absolute;
  bottom: 20px;
}
#footer .wave_box span {
  font-weight: 900;
  font-family: lato;
  font-style: italic;
  text-transform: uppercase;
  font-size: 4rem;
  color: #ddd;
  vertical-align: middle;
}
#footer .wave_box span:first-of-type {
  color: #b1151a;
}
#footer .copyright {
  color: #ddd;
  font-weight: 700;
  letter-spacing: 3px;
}
#footer .coc a {
  font-weight: 700;
  text-decoration: underline;
  color: white;
}
#footer .coc a:hover {
  color: #820507;
}
.flip {
  position: relative;
}
.flip > .front,
.flip > .back {
  display: block;
  transition-timing-function: cubic-bezier(0.175, 0.885, 0.32, 1.275);
  transition-duration: 1s;
  transition-property: transform, opacity;
}
.flip > .front {
  transform: rotateY(0deg);
}
.flip > .back {
  position: absolute;
  opacity: 0;
  top: 0px;
  left: 0px;
  width: 100%;
  height: 100%;
  transform: rotateY(-180deg);
}
.flip.flip-vertical > .back {
  transform: rotateX(-180deg);
}
#prizes .flip {
  position: relative;
  margin-top: 10px;
  margin-bottom: 10px;
}
#prizes .flip > .front,
#prizes .flip > .back {
  box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.15);
  color: white;
  background-size: cover;
  background-position: center;
  height: 400px;
  padding: 3em;
  background: #313131;
  border-radius: 25px;
}
#prizes .flip > .front h2,
#prizes .flip > .front h1,
#prizes .flip > .front h4,
#prizes .flip > .back h2,
#prizes .flip > .back h1,
#prizes .flip > .back h4 {
  color: #fff;
}
#prizes .flip > .front p,
#prizes .flip > .back p {
  line-height: 160%;
  color: #fff;
}
#prizes .flip > .front li,
#prizes .flip > .back li {
  list-style-type: disc;
}
/* ... */

